[package]
name = "phala-collator"
version = "2.0.0"
authors = ["Phala Network"]
description = "Phala Substrate Node"
build = "build.rs"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
default-run = "phala-collator"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

#[badges]
#travis-ci = { repository = "paritytech/substrate" }
#maintenance = { status = "actively-developed" }
#is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
#is-it-maintained-open-issues = { repository = "paritytech/substrate" }

[[bin]]
name = "phala-collator"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.4" }
serde = { version = "1.0.102", features = ["derive"] }
futures = { version = "0.3.1", features = ["compat"] }
hex-literal = "0.3.1"
jsonrpc-core = "15.1.0"
jsonrpc-pubsub = "14.2.0"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3.8", optional = true }
tracing = "0.1.22"
parking_lot = "0.10.0"

sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", version = "0.8.0-rc5", branch = "rococo-v1" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
grandpa-primitives = { version = "2.0.0", package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

# Cumulus dependencies
cumulus-consensus = { version = "0.1.0", git = "https://github.com/paritytech/cumulus", default-features = false, branch = "rococo-v1" }
cumulus-network = { version = "0.1.0", git = "https://github.com/paritytech/cumulus", default-features = false, branch = "rococo-v1" }
cumulus-primitives = { version = "0.1.0", git = "https://github.com/paritytech/cumulus", default-features = false, branch = "rococo-v1" }
cumulus-service = { version = "0.1.0", git = "https://github.com/paritytech/cumulus", default-features = false, branch = "rococo-v1" }

# Polkadot dependencies
polkadot-primitives = { version = "0.8.26", git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-service = { version = "0.8.3", git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-cli = { version = "0.8.26", git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-parachain = { version = "0.8.26", git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }

# frame dependencies
pallet-indices = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-timestamp = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-contracts = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
frame-system = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-balances = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-transaction-payment = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-im-online = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-authority-discovery = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-staking = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-grandpa = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

# node-specific dependencies
node-runtime = { version = "2.0.0", package = "phala-node-runtime", path = "../runtime" }
node-rpc = { version = "2.0.0", path = "../rpc" }
node-primitives = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
node-executor = { version = "2.0.0", path = "../executor" }

# CLI-specific dependencies
sc-cli = { version = "0.8.0", optional = true, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
frame-benchmarking-cli = { version = "2.0.0", optional = true, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
node-inspect = { version = "0.8.0", optional = true, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2.57", optional = true }
wasm-bindgen-futures = { version = "0.4.7", optional = true }
browser-utils = { package = "substrate-browser-utils", git = "https://github.com/paritytech/substrate", optional = true, version = "0.8.0", branch = "rococo-v1" }

[target.'cfg(target_arch="x86_64")'.dependencies]
node-executor = { version = "2.0.0", path = "../executor", features = [ "wasmtime" ] }
sc-cli = { version = "0.8.0", optional = true, git = "https://github.com/paritytech/substrate", features = [ "wasmtime" ], branch = "rococo-v1" }
sc-service = { version = "0.8.0", default-features = false, git = "https://github.com/paritytech/substrate", features = [ "wasmtime" ], branch = "rococo-v1" }
sp-trie = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", features = ["memory-tracker"], branch = "rococo-v1" }

[dev-dependencies]
sc-keystore = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
#sc-consensus = { version = "0.8.0", git = "https://github.com/paritytech/substrate/client/consensus/common" }
sc-consensus-babe = { version = "0.8.0", features = ["test-helpers"], git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-consensus-epochs = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-service-test = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
futures = "0.3.4"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.17"
serde_json = "1.0"
regex = "1"
platforms = "0.2.1"

[build-dependencies]
structopt = { version = "0.3.8", optional = true }
node-inspect = { version = "0.8.0", optional = true, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
frame-benchmarking-cli = { version = "2.0.0", optional = true, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
substrate-build-script-utils = { version = "2.0.0", optional = true, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
substrate-frame-cli = { version = "2.0.0", optional = true, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

[build-dependencies.sc-cli]
version = "0.8.0"
package = "sc-cli"
git = "https://github.com/paritytech/substrate"
branch = "rococo-v1"
optional = true

[build-dependencies.polkadot-cli]
version = "0.8.26"
package = "polkadot-cli"
git = "https://github.com/paritytech/polkadot"
branch = "rococo-v1"
optional = true

[features]
default = [ "cli" ]
browser = [
	"browser-utils",
	"wasm-bindgen",
	"wasm-bindgen-futures",
]
cli = [
	"node-executor/wasmi-errno",
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/db",
	"structopt",
	"substrate-build-script-utils",
	"polkadot-cli",
]
runtime-benchmarks = [
	"node-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
