[package]
name = "phost"
version = "0.1.0"
authors = ["h4x3rotab <h4x3rotab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { package = "futures", version = "0.3.4" }
tokio = { version = "0.2", features = ["full"] }
hyper = { version = "0.13" }
hex = { version = "*" }
base64 = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
bytes = "0.5"
structopt = { version = "0.3" }

subxt = { path = "../subxt", package = "substrate-subxt" }
system = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", package = "frame-system" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate",  branch = "rococo-branch" }
sp-runtime = { git = "https://github.com/paritytech/substrate",  branch = "rococo-branch" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
codec = { package = 'parity-scale-codec', version = "1.3.0" }

pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", package = "pallet-balances" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
