[package]
name = "phost"
version = "0.1.0"
authors = ["h4x3rotab <h4x3rotab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { package = "futures", version = "0.3.4" }
tokio = { version = "0.2", features = ["full"] }
hyper = { version = "0.13" }
hex = { version = "*" }
base64 = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
bytes = "0.5"
structopt = { version = "0.3" }

subxt = { path = "../subxt", package = "substrate-subxt" }
system = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1", package = "frame-system" }
sp-core = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-rpc = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1", package = "sp-rpc" }
sc-rpc-api = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1", package = "sc-rpc-api" }
sp-runtime = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1", package = "sp-runtime" }
sc-finality-grandpa = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-finality-grandpa = { version = "2.0.0", package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
codec = { package = 'parity-scale-codec', version = "1.3.4" }

pallet-grandpa = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-indices = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
balances = { version = "2.0.0", package = "pallet-balances", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-keyring = { version = "2.0.0", package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

phala-types = { path = "../common/types" }
