[package]
name = "node-rpc"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = "15.1.0"
node-primitives = { version = "2.0.0", path = "../substrate/bin/node/primitives" }
node-runtime = { version = "2.0.0", package = "phala-node-runtime", path = "../runtime" }
pallet-contracts-rpc = { version = "0.8.0", path = "../substrate/frame/contracts/rpc/" }
pallet-transaction-payment-rpc = { version = "2.0.0", path = "../substrate/frame/transaction-payment/rpc/" }
sc-client-api = { version = "2.0.0", path = "../substrate/client/api" }
sc-consensus-babe = { version = "0.8.0", path = "../substrate/client/consensus/babe" }
sc-consensus-babe-rpc = { version = "0.8.0", path = "../substrate/client/consensus/babe/rpc" }
sc-consensus-epochs = { version = "0.8.0", path = "../substrate/client/consensus/epochs" }
sc-chain-spec = { version = "2.0.0", path = "../substrate/client/chain-spec" }
sc-finality-grandpa = { version = "0.8.0", path = "../substrate/client/finality-grandpa" }
sc-finality-grandpa-rpc = { version = "0.8.0", path = "../substrate/client/finality-grandpa/rpc" }
sc-keystore = { version = "2.0.0", path = "../substrate/client/keystore" }
sc-rpc-api = { version = "0.8.0", path = "../substrate/client/rpc-api" }
sc-rpc = { version = "2.0.0", path = "../substrate/client/rpc" }
sc-sync-state-rpc = { version = "0.8.0", path = "../substrate/client/sync-state-rpc" }
sp-api = { version = "2.0.0", path = "../substrate/primitives/api" }
sp-block-builder = { version = "2.0.0", path = "../substrate/primitives/block-builder" }
sp-blockchain = { version = "2.0.0", path = "../substrate/primitives/blockchain" }
sp-keystore = { version = "0.8.0", path = "../substrate/primitives/keystore" }
sp-consensus = { version = "0.8.0", path = "../substrate/primitives/consensus/common" }
sp-consensus-babe = { version = "0.8.0", path = "../substrate/primitives/consensus/babe" }
sp-runtime = { version = "2.0.0", path = "../substrate/primitives/runtime" }
sp-transaction-pool = { version = "2.0.0", path = "../substrate/primitives/transaction-pool" }
substrate-frame-rpc-system = { version = "2.0.0", path = "../substrate/utils/frame/rpc/system" }
