[package]
name = "node-rpc"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = "15.1.0"
node-primitives = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
node-runtime = { version = "2.0.0", package = "phala-node-runtime", path = "../runtime" }
pallet-contracts-rpc = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-transaction-payment-rpc = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-client-api = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-consensus-babe = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-consensus-babe-rpc = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-consensus-epochs = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-chain-spec = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-finality-grandpa = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-finality-grandpa-rpc = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-keystore = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-rpc-api = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-rpc = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-sync-state-rpc = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-api = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-block-builder = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-blockchain = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-keystore = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-consensus = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-consensus-babe = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-runtime = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-transaction-pool = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
substrate-frame-rpc-system = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
