[package]
name = 'parachain-runtime'
version = '0.1.0'
authors = ["Parity Technologies <admin@parity.io>"]
edition = '2018'

[dependencies]
serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-indices = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }

# Cumulus dependencies
cumulus-runtime = { git = "https://github.com/paritytech/cumulus",  default-features = false, branch = "gav-xcmp" }
cumulus-parachain-upgrade = { git = "https://github.com/paritytech/cumulus",  default-features = false, branch = "gav-xcmp" }
cumulus-message-broker = { git = "https://github.com/paritytech/cumulus",  default-features = false, branch = "gav-xcmp" }
#cumulus-upward-message = { git = "https://github.com/paritytech/cumulus",  default-features = false, branch = "gav-xcmp" }
cumulus-primitives = { git = "https://github.com/paritytech/cumulus",  default-features = false, branch = "gav-xcmp" }
parachain-info = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "gav-xcmp" }

# polkadot dependencies
xcm = { git = "https://github.com/paritytech/polkadot", branch = "gav-xcmp", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "gav-xcmp", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "gav-xcmp", default-features = false }
xcm-handler  = { path = "../pallets/xcm-handler", default-features = false }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "gav-xcmp", default-features = false }

#phala dependencies
pallet-phala = { version = "2.0.0-rc5", default-features = false, path = "../pallets/phala", package = "pallet-phala" }
xtoken = { path = "../pallets/xtoken", default-features = false}

native-nostd-hasher = { version = "2.0.0-rc6", path = "../native-nostd-hasher", optional = true }


[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.6" }

[features]
default = ["std", "include-wasm"]
include-wasm = []
native-nostd = ["native-nostd-hasher"]
std = [
	"codec/std",
	"serde",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"parachain-info/std",
	"cumulus-runtime/std",
	"cumulus-parachain-upgrade/std",
	"cumulus-message-broker/std",
	#"cumulus-upward-message/std",
	"cumulus-primitives/std",
	"xtoken/std",
	"pallet-phala/std",
]
# Will be enabled by the `wasm-builder` when building the runtime for WASM.
runtime-wasm = [
	#"cumulus-upward-message/runtime-wasm",
]
